--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action="__SELF__" method="post">
+    商品名称：<input type="text" name="goods_name" /><br>
+    商品价格：<input type="text" name="price" /><br>
+    商品描述：<input type="text" name="goods_desc" /><br>
+    是否上架：<input type="radio" name="is_on_sale" value="1" checked="checked"/>上架
+    <input type="radio" name="is_on_sale" value="0" />下架
+    <br>
+    <input type="submit" value="提交" />
+</form>
 </body>
 </html>
