--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>shop</title>
 </head>
 <body>
-<form action="__SELF__" method="post">
+<form action="__SELF__" method="post" enctype="multipart/form-data">
     商品名称：<input type="text" name="goods_name" /><br>
     商品价格：<input type="text" name="price" /><br>
+    商品logo：<input type="file" name="logo" /><br>
     商品描述：<input type="text" name="goods_desc" /><br>
     是否上架：<input type="radio" name="is_on_sale" value="1" checked="checked"/>上架
     <input type="radio" name="is_on_sale" value="0" />下架
