--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>shop</title>
+    <script type="text/javascript" charset="utf-8" src="__PUBLIC__/ueditor/ueditor.config.js"></script>
+    <script type="text/javascript" charset="utf-8" src="__PUBLIC__/ueditor/ueditor.all.min.js"> </script>
+    <script type="text/javascript" charset="utf-8" src="__PUBLIC__/ueditor/lang/zh-cn/zh-cn.js"></script>
 </head>
 <body>
 <form action="__SELF__" method="post" enctype="multipart/form-data">
     商品名称：<input type="text" name="goods_name" /><br>
     商品价格：<input type="text" name="price" /><br>
     商品logo：<input type="file" name="logo" /><br>
-    商品描述：<input type="text" name="goods_desc" /><br>
+    商品描述：<textarea name="goods_desc" id="goods_desc"></textarea><br>
     是否上架：<input type="radio" name="is_on_sale" value="1" checked="checked"/>上架
     <input type="radio" name="is_on_sale" value="0" />下架
     <br>
@@ -17,3 +20,10 @@
 </form>
 </body>
 </html>
+<script>
+    UE.getEditor('goods_desc', {
+        "initialFrameWidth" : "100%",
+        "initialFrameHeight" : 350,
+        "maximumWords" : 15000,
+    });
+</script>
