--- a/Application/Admin/View/Goods/lst.html
+++ b/Application/Admin/View/Goods/lst.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title>shop</title>
     <link href="__PUBLIC__/datepicker/jquery-ui-1.9.2.custom.min.css" rel="stylesheet" type="text/css" />
+   <!--  <link href="__PUBLIC__/Admin/Styles/style.css" rel="stylesheet" type="text/css" /> -->
     <script type="text/javascript" language="javascript" src="__PUBLIC__/datepicker/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="__PUBLIC__/datepicker/jquery-ui-1.9.2.custom.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="__PUBLIC__/datepicker/datepicker_zh-cn.js"></script>
+    <style type="text/css">
+        span.current{padding: 5px;margin: 3px;background: #f00;color: #fff;font-weight: bold;}
+        a.num{padding: 5px;border: 1px solid #f00;margin: 3px;}
+    </style>
 </head>
 <body>
 <!--搜索的表单-->
