--- a/Application/Admin/View/Goods/edit.html
+++ b/Application/Admin/View/Goods/edit.html
@@ -12,7 +12,7 @@
     <input type="hidden" name="id" value="<?php echo $info['id']; ?>" />
     商品名称：<input type="text" name="goods_name" value="<?php echo $info['goods_name']; ?>" /><br>
     商品价格：<input type="text" name="price" value="<?php echo $info['price']; ?>" /><br>
-    <img src="<?php echo C('IMG_rootPath') . $info['sm_logo']; ?>" />
+    <img src="<?php echo '/Public/Uploads/' . $info['sm_logo']; ?>" />
     商品logo：<input type="file" name="logo" /><br>
     商品描述：<textarea name="goods_desc" id="goods_desc" value="<?php echo $info['goods_desc']; ?>"></textarea><br>
     是否上架：<input type="radio" name="is_on_sale" value="1" <?php if($info['is_on_sale'] == 1) echo 'checked="checked"'; ?> />上架
