--- a/Application/Admin/View/Index/main.html
+++ b/Application/Admin/View/Index/main.html
@@ -15,6 +15,7 @@
 </h1>
 <div class="list-div">
     <table cellspacing='1' cellpadding='3'>
+    <?php echo md5('adminfdsa#@90#_j132$0fdj!129'); ?>
         <tr>
             <th colspan="4" class="group-title">订单统计信息</th>
         </tr>
@@ -118,8 +119,4 @@
         </tr>
     </table>
 </div>
-<div id="footer">
-共执行 29 个查询，用时 0.539249 秒，Gzip 已禁用，内存占用 3.502 MB<br />
-版权所有 &copy; 2005-2012 上海商派网络科技有限公司，并保留所有权利。</div>
-</body>
-</html>
+<include file="Admin@Index:footer" />
