--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ECSHOP Menu</title>
+<title>Menu</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="__PUBLIC__/Admin/Styles/general.css" rel="stylesheet" type="text/css" />
 
@@ -79,15 +79,15 @@ body {
   color:#EB8A3D;
 }
 .explode {
-  background:url(./Images/menu_minus.gif) no-repeat 0px 3px;
+  background:url(__PUBLIC__/Admin/Images/menu_minus.gif) no-repeat 0px 3px;
   font-weight:bold;
 }
 .collapse {
-  background:url(./Images/menu_plus.gif) no-repeat 0px 3px;
+  background:url(__PUBLIC__/Admin/Images/menu_plus.gif) no-repeat 0px 3px;
   font-weight:bold;
 }
 .menu-item {
-  background:url(./Images/menu_arrow.gif) no-repeat 0px 3px;
+  background:url(__PUBLIC__/Admin/Images/menu_arrow.gif) no-repeat 0px 3px;
   font-weight:normal;
 }
 #help-title {
@@ -126,7 +126,7 @@ body {
             <li class="explode" key="02_cat_and_goods" name="menu">
             商品管理
                 <ul>
-                    <li class="menu-item"><a href="goodsList.html" target="main-frame">商品列表</a></li>
+                    <li class="menu-item"><a href="<?php echo U('Admin/Goods/lst'); ?>" target="main-frame">商品列表</a></li>
                     <li class="menu-item"><a href="goodsAdd.html" target="main-frame">添加新商品</a></li>
                     <li class="menu-item"><a href="categoryList.html" target="main-frame">商品分类</a></li>
                     <li class="menu-item"><a href="brandList.html" target="main-frame">商品品牌</a></li>
@@ -159,9 +159,9 @@ body {
         <div id="help-content"></div>
     </div>
 </div>
-<script type="text/javascript" src="./Js/global.js"></script>
-<script type="text/javascript" src="./Js/utils.js"></script>
-<script type="text/javascript" src="./Js/transport.js"></script>
+<script type="text/javascript" src="__PUBLIC__/Admin/Js/global.js"></script>
+<script type="text/javascript" src="__PUBLIC__/Admin/Js/utils.js"></script>
+<script type="text/javascript" src="__PUBLIC__/Admin/Js/transport.js"></script>
 <script language="JavaScript">
     var collapse_all = "闭合";
     var expand_all = "展开";
@@ -182,7 +182,7 @@ body {
             }
         }
         collapse = !collapse;
-        document.getElementById('toggleImg').src = collapse ? './Images/menu_minus.gif' : './Images/menu_plus.gif';
+        document.getElementById('toggleImg').src = collapse ? '__PUBLIC__/Admin/Images/menu_minus.gif' : '__PUBLIC__/Admin/Images/menu_plus.gif';
         document.getElementById('toggleImg').alt = collapse ? collapse_all : expand_all;
     }
 
@@ -302,7 +302,7 @@ body {
                         }
                     }
                 }
-                document.getElementById('toggleImg').src = collapse ? './Images/menu_minus.gif' : './Images/menu_plus.gif';
+                document.getElementById('toggleImg').src = collapse ? '__PUBLIC__/Admin/Images/menu_minus.gif' : '__PUBLIC__/Admin/Images/menu_plus.gif';
                 document.getElementById('toggleImg').alt = collapse ? collapse_all : expand_all;
             }
         }
