--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -1,29 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "/www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="/www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>shop</title>
-    <script type="text/javascript" charset="utf-8" src="__PUBLIC__/ueditor/ueditor.config.js"></script>
-    <script type="text/javascript" charset="utf-8" src="__PUBLIC__/ueditor/ueditor.all.min.js"> </script>
-    <script type="text/javascript" charset="utf-8" src="__PUBLIC__/ueditor/lang/zh-cn/zh-cn.js"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/ueditor/ueditor.config.js"></script>
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/ueditor/ueditor.all.min.js"> </script>
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/ueditor/lang/zh-cn/zh-cn.js"></script>
 </head>
 <body>
-<form action="__SELF__" method="post" enctype="multipart/form-data">
-    商品名称：<input type="text" name="goods_name" /><br>
-    商品价格：<input type="text" name="price" /><br>
-    商品logo：<input type="file" name="logo" /><br>
-    商品描述：<textarea name="goods_desc" id="goods_desc"></textarea><br>
-    是否上架：<input type="radio" name="is_on_sale" value="1" checked="checked"/>上架
+<form method="POST" action="__SELF__" enctype="multipart/form-data">
+    商品名称:<input type="text" name="goods_name" /><br />
+    商品价格:<input type="text" name="price" /><br />
+    商品logo:<input type="file" name="logo" /><br />
+    商品描述:<textarea name="goods_desc" id="goods_desc"></textarea><br />
+    是否上架:
+    <input type="radio" name="is_on_sale" value="1" checked="checked" />上架
     <input type="radio" name="is_on_sale" value="0" />下架
-    <br>
+    <br />
     <input type="submit" value="提交" />
+    <a href="<?php echo U('lst'); ?>">列表</a>
 </form>
 </body>
 </html>
 <script>
-    UE.getEditor('goods_desc', {
-        "initialFrameWidth" : "100%",
-        "initialFrameHeight" : 350,
-        "maximumWords" : 15000,
-    });
+UE.getEditor('goods_desc', {
+    "initialFrameWidth" : "100%",  // 宽
+    "initialFrameHeight" : 350,     // 高
+    "maximumWords" : 50000             // 最可以输入的字符数
+});
 </script>
