--- a/Application/Admin/View/Goods/lst.html
+++ b/Application/Admin/View/Goods/lst.html
@@ -1,68 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>shop</title>
-    <link href="__PUBLIC__/datepicker/jquery-ui-1.9.2.custom.min.css" rel="stylesheet" type="text/css" />
-   <!--  <link href="__PUBLIC__/Admin/Styles/style.css" rel="stylesheet" type="text/css" /> -->
-    <script type="text/javascript" language="javascript" src="__PUBLIC__/datepicker/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="__PUBLIC__/datepicker/jquery-ui-1.9.2.custom.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="__PUBLIC__/datepicker/datepicker_zh-cn.js"></script>
-    <style type="text/css">
-        span.current{padding: 5px;margin: 3px;background: #f00;color: #fff;font-weight: bold;}
-        a.num{padding: 5px;border: 1px solid #f00;margin: 3px;}
-    </style>
+<title>商品列表</title>
+<meta name="robots" content="noindex, nofollow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="__PUBLIC__/Admin/Styles/general.css" rel="stylesheet" type="text/css" />
+<link href="__PUBLIC__/Admin/Styles/main.css" rel="stylesheet" type="text/css" />
+
+<link href="__PUBLIC__/datepicker/jquery-ui-1.9.2.custom.min.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" language="javascript" src="__PUBLIC__/datepicker/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/datepicker/jquery-ui-1.9.2.custom.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/datepicker/datepicker_zh-cn.js"></script>
 </head>
 <body>
-<!--搜索的表单-->
-<form>
-    <input type="hidden" name="p" value="1" />
-    商品名称：<input type="text" name="goods_name" value="<?php echo I('get.goods_name'); ?>" /><br/>
-    价格：<input type="text" name="start_price" value="<?php echo I('get.start_price'); ?>" />-<input type="text" name="end_price" value="<?php echo I('get.end_price'); ?>" /><br/>
-    添加时间：<input type="text" size="8" id="start_addtime" name="start_addtime" value="<?php echo I('get.start_addtime') ?>" />-
-    <input type="text" size="8" id="end_addtime" name="end_addtime" value="<?php echo I('get.end_addtime') ?>" />
-    是否上架：<input type="radio" name="is_on_sale" value="-1" <?php if(I('get.is_on_sale',-1) == -1) echo 'checked="checked"'; ?> />全部
-            <input type="radio" name="is_on_sale" value="1" <?php if(I('get.is_on_sale',-1) == 1) echo 'checked="checked"'; ?> />是
-            <input type="radio" name="is_on_sale" value="0" <?php if(I('get.is_on_sale',-1) == 0) echo 'checked="checked"'; ?> />否<br/>
-    是否删除：<input type="radio" name="is_delete" value="-1" <?php if(I('get.is_delete',-1) == -1) echo 'checked="checked"'; ?> />全部
-            <input type="radio" name="is_delete" value="1" <?php if(I('get.is_delete',-1) == 1) echo 'checked="checked"'; ?> />是
-            <input type="radio" name="is_delete" value="0" <?php if(I('get.is_delete',-1) == 0) echo 'checked="checked"'; ?> />否
-    <input type="submit" value="搜索" /><br/>
-    排序方式：<input onclick="parentNode.submit();" type="radio" name="odby" value="id_asc" <?php if(I('get.odby','id_asc') == 'id_asc') echo 'checked="checked"' ?> />根据添加时间升序
-    <input onclick="parentNode.submit();" type="radio" name="odby" value="id_desc" <?php if(I('get.odby') == 'id_desc') echo 'checked="checked"' ?> />根据添加时间降序
-    <input onclick="parentNode.submit();" type="radio" name="odby" value="price_asc" <?php if(I('get.odby') == 'price_asc') echo 'checked="checked"' ?> />根据价格升序
-    <input onclick="parentNode.submit();" type="radio" name="odby" value="price_desc" <?php if(I('get.odby') == 'price_desc') echo 'checked="checked"' ?> />根据价格降序
+<h1>
+    <span class="action-span"><a href="<?php echo U('add'); ?>">添加商品</a></span>
+    <span class="action-span1"><a href="#">管理中心</a></span>
+    <span id="search_id" class="action-span1"> - 商品列表 </span>
+    <div style="clear:both"></div>
+</h1>
+<div class="form-div">
+<form action="__SELF__" name="searchForm">
+<input type="hidden" name="p" value="1" />
+<p>商品名称：<input type="text" name="goods_name" value="<?php echo I('get.goods_name'); ?>" /></p>
+
+<p>价　　格：<input type="text" size="8" name="start_price" value="<?php echo I('get.start_price'); ?>" /> ~ 
+        <input type="text" size="8" name="end_price" value="<?php echo I('get.end_price'); ?>" /></p>
+        
+<p>添加时间：<input type="text" size="8" id="start_addtime" name="start_addtime" value="<?php echo I('get.start_addtime'); ?>" /> ~ 
+        <input type="text" size="8" id="end_addtime" name="end_addtime" value="<?php echo I('get.end_addtime'); ?>" /></p>
+
+<p>上否上架：<input type="radio" name="is_on_sale" value="-1" <?php if(I('get.is_on_sale', -1) == -1) echo 'checked="checked"'; ?> />全部
+        <input type="radio" name="is_on_sale" value="1" <?php if(I('get.is_on_sale') == 1) echo 'checked="checked"'; ?> />是
+        <input type="radio" name="is_on_sale" value="0" <?php if(I('get.is_on_sale') === '0') echo 'checked="checked"'; ?> />否</p>
+        
+<p>是否删除：<input type="radio" name="is_delete" value="-1" <?php if(I('get.is_delete', -1) == -1) echo 'checked="checked"'; ?> />全部
+        <input type="radio" name="is_delete" value="1" <?php if(I('get.is_delete') == 1) echo 'checked="checked"'; ?> />是
+        <input type="radio" name="is_delete" value="0" <?php if(I('get.is_delete') === '0') echo 'checked="checked"'; ?> />否</p>
+
+<p><input type="submit" value="搜索" /></p>
+        
+排序方式：<input onclick="parentNode.submit();" type="radio" name="odby" value="id_asc" <?php if(I('get.odby') == 'id_asc') echo 'checked="checked"'; ?> />根据添加时间升序
+        <input onclick="parentNode.submit();" type="radio" name="odby" value="id_desc" <?php if(I('get.odby', 'id_desc') == 'id_desc') echo 'checked="checked"'; ?> />根据添加时间降序
+        <input onclick="parentNode.submit();" type="radio" name="odby" value="price_asc" <?php if(I('get.odby') == 'price_asc') echo 'checked="checked"'; ?> />根据价格升序
+        <input onclick="parentNode.submit();" type="radio" name="odby" value="price_desc" <?php if(I('get.odby') == 'price_desc') echo 'checked="checked"'; ?> />根据价格降序<br />
 </form>
-<table width="1024px" height="600px" border="1" cellspacing="0">
-    <tr>
-        <th>id</th>
-        <th>添加时间</th>
-        <th>商品名称</th>
-        <th>LOGO</th>
-        <th>价格</th>
-        <th>描述</th>
-        <th>是否上架</th>
-        <th>是否删除</th>
-        <th>操作</th>
-    </tr>
-    <volist name="data" id="dat">
-        <tr>
-            <td>{$dat.id}</td>
-            <td><?php echo date('Y-m-d H-i-s', $dat['addtime']) ?></td>
-            <td>{$dat.goods_name}</td>
-            <td><img src="/Public/Uploads/{$dat.logo}" width="20" height="20"/></td>
-            <td>{$dat.price}</td>
-            <td>{$dat.goods_desc}</td>
-            <td><?php echo $dat.is_on_sale == 1 ? '上架' : '下架' ?></td>
-            <td><?php echo $dat.is_on_sale == 1 ? '已删除' : '未删除' ?></td>
-            <td><a href="<?php echo U('edit?id='.$dat['id'].'$p='.I('get.p',1)); ?>">修改</a><a href="<?php echo U('delete?&id='.$dat[id].'&p='.I('get.p',1)); ?>"> 删除</a> </td>
-        </tr>
-    </volist>
-    <tr><td colspan="9">{$page}</td></tr>
-</table>
-</body>
-</html>
+</div>
+<form method="post" action="" name="listForm">
+    <div class="list-div" id="listDiv">
+        <table cellpadding="3" cellspacing="1">
+            <tr>
+                <th>id</th>
+                <th>添加时间</th>
+                <th>商品名称</th>
+                <th>LOGO</th>
+                <th>价格</th>
+                <th>是否上架</th>
+                <th>是否删除</th>
+                <th>操作</th>
+            </tr>
+            <?php foreach ($data as $k => $v): ?>
+            <tr>
+                <td>{$v.id}</td>
+                <td><?php echo date('Y-m-d H:i:s', $v['addtime']); ?></td>
+                <td>{$v.goods_name}</td>
+                <td><img src="/Public/Uploads/{$v.sm_logo}" /></td>
+                <td>{$v.price}</td>
+                <td><?php echo $v['is_on_sale'] == 1 ? '上架' : '下架'; ?></td>
+                <td><?php echo $v['is_delete'] == 1 ? '已删除' : '未删除'; ?></td>
+                <td>
+                <a href="<?php echo U('edit?id='.$v['id'].'&p='.I('get.p', 1)); ?>">修改</a>
+                <a onclick="return confirm('确定要删除吗？');" href="<?php echo U('delete?id='.$v['id'].'&p='.I('get.p', 1)); ?>">删除</a>
+                </td>
+            </tr>
+            <?php endforeach; ?>
+            <tr><td colspan="8">{$page}</td></tr>
+        </table>
+    </div>
+</form>
+<include file="Admin@Index:footer" />
 <script>
-    $('#start_addtime').datepicker({dateFormat:"yy-mm-dd"});
-    $('#end_addtime').datepicker({dateFormat:"yy-mm-dd"});
+$("#start_addtime").datepicker({ dateFormat: "yy-mm-dd" });
+$("#end_addtime").datepicker({ dateFormat: "yy-mm-dd" });
 </script>
