--- a/Application/Admin/View/Login/login.html
+++ b/Application/Admin/View/Login/login.html
@@ -30,7 +30,7 @@
                     <tr>
                         <td>验证码：</td>
                         <td>
-                            <input type="text" name="captcha" class="capital" />
+                            <input type="text" name="chkcode" class="chkcode" />
                         </td>
                     </tr>
                     <tr>
