--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -1,112 +1,112 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Menu</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="__PUBLIC__/Admin/Styles/general.css" rel="stylesheet" type="text/css" />
+    <title>Menu</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href="__PUBLIC__/Admin/Styles/general.css" rel="stylesheet" type="text/css" />
 
-<style type="text/css">
-body {
-  background: #80BDCB;
-}
-#tabbar-div {
-  background:#278296;
-  padding-left:10px;
-  height:21px;
-  padding-top:0px;
-}
-#tabbar-div p {
-  margin:1px 0 0 0;
-}
-.tab-front {
-  background:#80BDCB;
-  line-height:20px;
-  font-weight:bold;
-  padding:4px 15px 4px 18px;
-  border-right:2px solid #335b64;
-  cursor:hand;
-  cursor:pointer;
-}
-.tab-back {
-  color:#F4FAFB;
-  line-height:20px;
-  padding:4px 15px 4px 18px;
-  cursor:hand;
-  cursor:pointer;
-}
-.tab-hover {
-  color:#F4FAFB;
-  line-height:20px;
-  padding:4px 15px 4px 18px;
-  cursor:hand;
-  cursor:pointer;
-  background:#2F9DB5;
-}
-#top-div
-{
-  padding:3px 0 2px;
-  background:#BBDDE5;
-  margin:5px;
-  text-align:center;
-}
-#main-div {
-  border:1px solid #345C65;
-  padding:5px;
-  margin:5px;
-  background:#FFF;
-}
-#menu-list {
-  padding:0;
-  margin:0;
-}
-#menu-list ul {
-  padding:0;
-  margin:0;
-  list-style-type: none;
-  color:#335B64;
-}
-#menu-list li {
-  padding-left:16px;
-  line-height:16px;
-  cursor:hand;
-  cursor:pointer;
-}
-#main-div a:visited, #menu-list a:link, #menu-list a:hover {
-  color:#335B64
-  text-decoration:none;
-}
-#menu-list a:active {
-  color:#EB8A3D;
-}
-.explode {
-  background:url(__PUBLIC__/Admin/Images/menu_minus.gif) no-repeat 0px 3px;
-  font-weight:bold;
-}
-.collapse {
-  background:url(__PUBLIC__/Admin/Images/menu_plus.gif) no-repeat 0px 3px;
-  font-weight:bold;
-}
-.menu-item {
-  background:url(__PUBLIC__/Admin/Images/menu_arrow.gif) no-repeat 0px 3px;
-  font-weight:normal;
-}
-#help-title {
-  font-size:14px;
-  color:#000080;
-  margin:5px 0;
-  padding:0px;
-}
-#help-content {
-  margin:0;
-  padding:0;
-}
-.tips {
-  color:#CC0000;
-}
-.link {
-  color:#000099;
-}
-</style>
+    <style type="text/css">
+        body {
+            background: #80BDCB;
+        }
+        #tabbar-div {
+            background:#278296;
+            padding-left:10px;
+            height:21px;
+            padding-top:0px;
+        }
+        #tabbar-div p {
+            margin:1px 0 0 0;
+        }
+        .tab-front {
+            background:#80BDCB;
+            line-height:20px;
+            font-weight:bold;
+            padding:4px 15px 4px 18px;
+            border-right:2px solid #335b64;
+            cursor:hand;
+            cursor:pointer;
+        }
+        .tab-back {
+            color:#F4FAFB;
+            line-height:20px;
+            padding:4px 15px 4px 18px;
+            cursor:hand;
+            cursor:pointer;
+        }
+        .tab-hover {
+            color:#F4FAFB;
+            line-height:20px;
+            padding:4px 15px 4px 18px;
+            cursor:hand;
+            cursor:pointer;
+            background:#2F9DB5;
+        }
+        #top-div
+        {
+            padding:3px 0 2px;
+            background:#BBDDE5;
+            margin:5px;
+            text-align:center;
+        }
+        #main-div {
+            border:1px solid #345C65;
+            padding:5px;
+            margin:5px;
+            background:#FFF;
+        }
+        #menu-list {
+            padding:0;
+            margin:0;
+        }
+        #menu-list ul {
+            padding:0;
+            margin:0;
+            list-style-type: none;
+            color:#335B64;
+        }
+        #menu-list li {
+            padding-left:16px;
+            line-height:16px;
+            cursor:hand;
+            cursor:pointer;
+        }
+        #main-div a:visited, #menu-list a:link, #menu-list a:hover {
+            color:#335B64
+            text-decoration:none;
+        }
+        #menu-list a:active {
+            color:#EB8A3D;
+        }
+        .explode {
+            background:url(__PUBLIC__/Admin/Images/menu_minus.gif) no-repeat 0px 3px;
+            font-weight:bold;
+        }
+        .collapse {
+            background:url(__PUBLIC__/Admin/Images/menu_plus.gif) no-repeat 0px 3px;
+            font-weight:bold;
+        }
+        .menu-item {
+            background:url(__PUBLIC__/Admin/Images/menu_arrow.gif) no-repeat 0px 3px;
+            font-weight:normal;
+        }
+        #help-title {
+            font-size:14px;
+            color:#000080;
+            margin:5px 0;
+            padding:0px;
+        }
+        #help-content {
+            margin:0;
+            padding:0;
+        }
+        .tips {
+            color:#CC0000;
+        }
+        .link {
+            color:#000099;
+        }
+    </style>
 
 </head>
 <body>
@@ -124,32 +124,19 @@ body {
     <div id="menu-list">
         <ul id="menu-ul">
             <li class="explode" key="02_cat_and_goods" name="menu">
-            商品管理
+                商品管理
                 <ul>
                     <li class="menu-item"><a href="<?php echo U('Admin/Goods/lst'); ?>" target="main-frame">商品列表</a></li>
-                    <li class="menu-item"><a href="goodsAdd.html" target="main-frame">添加新商品</a></li>
-                    <li class="menu-item"><a href="categoryList.html" target="main-frame">商品分类</a></li>
-                    <li class="menu-item"><a href="brandList.html" target="main-frame">商品品牌</a></li>
-                    <li class="menu-item"><a href="goodsTrash.html" target="main-frame">商品回收站</a></li>
+                    <li class="menu-item"><a href="<?php echo U('Admin/Category/lst'); ?>" target="main-frame">商品分类</a></li>
                 </ul>
             </li>
 
             <li class="explode" key="04_order" name="menu">
-            订单管理
+                权限管理
                 <ul>
-                    <li class="menu-item"><a href="orderList.html" target="main-frame">订单列表</a></li>
-                    <li class="menu-item"><a href="orderQuery.html" target="main-frame">订单查询</a></li>
-                    <li class="menu-item"><a href="orderAdd.html" target="main-frame">添加订单</a></li>
-                    <li class="menu-item"><a href="delivery_list.html" target="main-frame">发货单列表</a></li>
-                    <li class="menu-item"><a href="back_list.html" target="main-frame">退货单列表</a></li>
-                </ul>
-            </li>
-            <li class="explode" key="08_members" name="menu">
-            会员管理
-                <ul>
-                    <li class="menu-item"><a href="userList.html" target="main-frame">会员列表</a></li>
-                    <li class="menu-item"><a href="userAdd.html" target="main-frame">添加会员</a></li>
-                    <li class="menu-item"><a href="userMessage.html" target="main-frame">会员留言</a></li>
+                    <li class="menu-item"><a href="<?php echo U('Admin/Privilege/lst'); ?>" target="main-frame">权限列表</a></li>
+                    <li class="menu-item"><a href="<?php echo U('Admin/Role/lst'); ?>" target="main-frame">角色列表</a></li>
+                    <li class="menu-item"><a href="<?php echo U('Admin/Admin/lst'); ?>" target="main-frame">管理员列表</a></li>
                 </ul>
             </li>
         </ul>
@@ -208,8 +195,8 @@ body {
                         } else {
                             ToggleHanlder.RecordState(obj.getAttribute("key"),"explode");
                             obj.className = "explode";
-                            }
-                            obj.childNodes[1].style.display = (status == "explode") ? "block" : "none";
+                        }
+                        obj.childNodes[1].style.display = (status == "explode") ? "block" : "none";
                     }
                 }
             }
@@ -263,49 +250,49 @@ body {
     var ToggleHanlder = new Object();
 
     Object.extend(
-        ToggleHanlder ,{
-            SourceObject : new Object(),
-            CookieName   : 'Toggle_State',
-            RecordState : function(name,state){
-                if(state == "collapse") {
-                    this.SourceObject[name] = state;
-                } else {
-                    if(this.SourceObject[name]) {
-                        delete(this.SourceObject[name]);
+            ToggleHanlder ,{
+                SourceObject : new Object(),
+                CookieName   : 'Toggle_State',
+                RecordState : function(name,state){
+                    if(state == "collapse") {
+                        this.SourceObject[name] = state;
+                    } else {
+                        if(this.SourceObject[name]) {
+                            delete(this.SourceObject[name]);
+                        }
                     }
-                }
-                var date = new Date();
-                date.setTime(date.getTime() + 99999999);
-                document.setCookie(this.CookieName, this.SourceObject.toJSONString(),date.toGMTString());
-            },
+                    var date = new Date();
+                    date.setTime(date.getTime() + 99999999);
+                    document.setCookie(this.CookieName, this.SourceObject.toJSONString(),date.toGMTString());
+                },
 
-            Reset :function() {
-                var date = new Date();
-                date.setTime(date.getTime() + 99999999);
-                document.setCookie(this.CookieName,"{}",date.toGMTString());
-            },
+                Reset :function() {
+                    var date = new Date();
+                    date.setTime(date.getTime() + 99999999);
+                    document.setCookie(this.CookieName,"{}",date.toGMTString());
+                },
 
-            Load : function() {
-                if(document.getCookie(this.CookieName) != null) {
-                    this.SourceObject = eval("("+ document.getCookie(this.CookieName) +")");
-                    var items = document.getElementsByTagName('LI');
-                    for(var i = 0; i < items.length; i++) {
-                        if( items[0].getAttribute("name") == "menu" && items[0].getAttribute("id") != '20_yun') {
-                            for(var k in this.SourceObject) {
-                                if(typeof(items[i]) == "object") {
-                                    if(items[i].getAttribute('key') == k) {
-                                        toggleCollapseExpand(items[i], this.SourceObject[k]);
-                                        collapse = false;
+                Load : function() {
+                    if(document.getCookie(this.CookieName) != null) {
+                        this.SourceObject = eval("("+ document.getCookie(this.CookieName) +")");
+                        var items = document.getElementsByTagName('LI');
+                        for(var i = 0; i < items.length; i++) {
+                            if( items[0].getAttribute("name") == "menu" && items[0].getAttribute("id") != '20_yun') {
+                                for(var k in this.SourceObject) {
+                                    if(typeof(items[i]) == "object") {
+                                        if(items[i].getAttribute('key') == k) {
+                                            toggleCollapseExpand(items[i], this.SourceObject[k]);
+                                            collapse = false;
+                                        }
                                     }
                                 }
                             }
                         }
                     }
+                    document.getElementById('toggleImg').src = collapse ? '__PUBLIC__/Admin/Images/menu_minus.gif' : '__PUBLIC__/Admin/Images/menu_plus.gif';
+                    document.getElementById('toggleImg').alt = collapse ? collapse_all : expand_all;
                 }
-                document.getElementById('toggleImg').src = collapse ? '__PUBLIC__/Admin/Images/menu_minus.gif' : '__PUBLIC__/Admin/Images/menu_plus.gif';
-                document.getElementById('toggleImg').alt = collapse ? collapse_all : expand_all;
             }
-        }
     );
 
 </script>
